err/glamkit-eventtools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/eventtools'...
Listing './lib/python3.5/site-packages/eventtools/conf'...
Listing './lib/python3.5/site-packages/eventtools/locale'...
Listing './lib/python3.5/site-packages/eventtools/locale/de'...
Listing './lib/python3.5/site-packages/eventtools/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eventtools/locale/en'...
Listing './lib/python3.5/site-packages/eventtools/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eventtools/locale/es'...
Listing './lib/python3.5/site-packages/eventtools/locale/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eventtools/locale/fr'...
Listing './lib/python3.5/site-packages/eventtools/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eventtools/locale/tr_TR'...
Listing './lib/python3.5/site-packages/eventtools/locale/tr_TR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/eventtools/models'...
Compiling './lib/python3.5/site-packages/eventtools/models/rules.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (rules.py, line 60)
Listing './lib/python3.5/site-packages/eventtools/templates'...
Listing './lib/python3.5/site-packages/eventtools/templates/admin'...
Listing './lib/python3.5/site-packages/eventtools/templates/admin/eventtools'...
Listing './lib/python3.5/site-packages/eventtools/templates/admin/eventtools/occurrence'...
Listing './lib/python3.5/site-packages/eventtools/templatetags'...
Listing './lib/python3.5/site-packages/eventtools/tests'...
Listing './lib/python3.5/site-packages/eventtools/tests/eventtools_testapp'...
Compiling './lib/python3.5/site-packages/eventtools/tests/test_models.py'...
***   File "./lib/python3.5/site-packages/eventtools/tests/test_models.py", line 241
    start_date = date(2010, 03, 1) #it's a monday
                             ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/glamkit_eventtools-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/vobject'...
Listing './lib/python3.5/site-packages/vobject-0.9.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
